tests/paczka1/fuzzy1/60471592.err
Error in line 8: dD9 A78 76,3
Error in line 10: PJrX A832 35,6
Error in line 17: PJrX S878 59,0
Error in line 11: MpMP5tuGA9 A832 135,7
